data/derived/sp14/progs/unify/prog2646.ml.out
Characters 128-129:
  if ( (List.length s) = (List.length a) )
                                      ^
Error: This expression has type 'a * 'b list
       but an expression was expected of type 'c list
